# elxr-metrics

./: .gitignore  .gitlab-ci.yml  .pages.gitlab-ci.yml  .pre-commit-config.yaml  .python.gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hld.md  make.bat  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.gitlab/: .gitlab-ci.yml  .pages.gitlab-ci.yml  .python.gitlab-ci.yml
.gitlab/issue_templates/: Default.md  Documentation.md  Feature Proposal.md  documentation.md  feature proposal.md
.gitlab/merge_request_templates/: default.md
docs/: README.md  conf.py  elxr_metrics.rst  index.rst  modules.rst
public/: countries.csv  country.csv  elxr_org_view.csv  image_stats.csv  image_top_10.csv  index.html  package_stats.csv  package_top_10.csv  script.js  style.css
src/elxr_metrics/: __init__.py  __main__.py  cloudfront_log.py  db_utils.py  elapsed.py  elxr_image.py  elxr_org_trend.py  elxr_package.py
tests/: conftest.py  test_db_utils.py  test_main.py  test_parse_image.py  test_parse_log.py  test_parse_package.py  test_parse_trend.py
